crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__functions__function_named_arg_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/functions.rs
assertion_line: 6
expression: "goto_definition(r#\"\n%! main.sp\nvoid bar(int foo=1) {}\n\nvoid baz() {\n    bar(.foo=1);\n          |\n          ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 3,
        "character": 9
      },
      "end": {
        "line": 3,
        "character": 12
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 0,
        "character": 9
      },
      "end": {
        "line": 0,
        "character": 18
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 0,
        "character": 13
      },
      "end": {
        "line": 0,
        "character": 16
      }
    }
  }
]
