crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__functions__function_named_arg_2.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/functions.rs
assertion_line: 22
expression: "goto_definition(r#\"\n%! main.sp\nint bar(int foo=1) {}\nint baz(int foo=1) {}\n\nvoid foo() {\n    bar(.foo=baz(.foo=1));\n                   |\n                   ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 4,
        "character": 18
      },
      "end": {
        "line": 4,
        "character": 21
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 8
      },
      "end": {
        "line": 1,
        "character": 17
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 12
      },
      "end": {
        "line": 1,
        "character": 15
      }
    }
  }
]
