crates/sourcepawn_lsp/tests/text_document/goto_definition/snapshots/main__text_document__goto_definition__functions__method_named_arg_1.snap
---
source: crates/sourcepawn_lsp/tests/text_document/goto_definition/functions.rs
assertion_line: 22
expression: "goto_definition(r#\"\n%! main.sp\nenum struct Foo {\n    void foo(int foo=1) {}\n}\n\nvoid bar() {\n    Foo foo;\n    foo.foo(.foo=1);\n              |\n              ^\n}\n\"#)"
---
[
  {
    "originSelectionRange": {
      "start": {
        "line": 6,
        "character": 13
      },
      "end": {
        "line": 6,
        "character": 16
      }
    },
    "targetUri": "file:///main.sp",
    "targetRange": {
      "start": {
        "line": 1,
        "character": 13
      },
      "end": {
        "line": 1,
        "character": 22
      }
    },
    "targetSelectionRange": {
      "start": {
        "line": 1,
        "character": 17
      },
      "end": {
        "line": 1,
        "character": 20
      }
    }
  }
]
